# sac-mtdynamic

./: .gitignore  Dockerfile  Makefile  README.md  adapt.ipynb  bench_matmul.sh  bench_nbody.sh  bench_power_all.sh  bench_threads_flash.sh  bench_threads_matmul.sh  bench_threads_nbody.sh  bench_threads_stencil.sh  fixed.ipynb  power.ipynb  threads.ipynb
clbg/: Cargo.toml
clbg/src/: binary_trees.rs  fannkuch_redux.rs  fasta.rs  lib.rs  mandelbrot.rs  nbody.rs  regex_redux.rs  reverse_complement.rs  spectral_norm.rs
rust/: Cargo.toml
rust/src/: flash.rs  lib.rs  matmul_naive.rs  matmul_transp.rs  nbody.rs  stencil.rs
scripts/: bench.sh
scripts_cn125/: bench_threads_flash.sh  bench_threads_matmul.sh  bench_threads_nbody.sh  bench_threads_stencil.sh
scripts_cn132/: bench_threads_flash.sh  bench_threads_matmul.sh  bench_threads_nbody.sh  bench_threads_stencil.sh
scripts_omen/: adapt_nbody.sh  bench.sh  power_rust_flash.sh  power_rust_matmul_naive.sh  power_rust_matmul_transp.sh  power_rust_nbody.sh  power_rust_stencil.sh  power_sac_flash.sh  power_sac_matmul_naive.sh  power_sac_matmul_transp.sh  power_sac_nbody.sh  power_sac_stencil.sh
scripts_sel265k/: adapt_matmul.sh  adapt_nbody.sh  adapt_rust_stencil.sh  bench.sh  bench_power_flash.sh  bench_power_matmul.sh  bench_power_matmul_naive.sh  bench_power_nbody.sh  bench_power_stencil.sh  power_flash.sh  power_matmul.sh  power_matmul_naive.sh  power_matmul_transp.sh  power_nbody.sh  power_rust_flash.sh  power_rust_matmul_naive.sh  power_rust_matmul_transp.sh  power_rust_nbody.sh  power_rust_stencil.sh  power_sac_flash.sh  power_sac_matmul_naive.sh  power_sac_matmul_transp.sh  (+3 more)
src_rust/: Cargo.toml
src_rust/src/: lib.rs  matmul_naive.rs  matmul_transp.rs  matmul_transpose.rs  nbody.rs  stencil.rs
(+13 files in other folders)
