[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"

[[bin]]
name = "matmul-naive"
path = "src/matmul_naive.rs"

[[bin]]
name = "matmul-transp"
path = "src/matmul_transp.rs"

[[bin]]
name = "nbody"
path = "src/nbody.rs"

[[bin]]
name = "stencil"
path = "src/stencil.rs"

[dependencies]
controller = { git = "https://github.com/JordyAaldering/mtdynamic.git" }
rapl-energy = { git = "https://github.com/JordyAaldering/rapl-energy.git" }
rayon = "1.10.0"
